[gd_scene load_steps=12 format=2]

[ext_resource path="res://examples/scripts/ink_runner.gd" type="Script" id=1]
[ext_resource path="res://examples/images/transparent.png" type="Texture" id=2]
[ext_resource path="res://examples/images/inkgd_the_intercept.png" type="Texture" id=3]
[ext_resource path="res://examples/images/spinner.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
VScrollBar/icons/decrement = ExtResource( 2 )
VScrollBar/icons/decrement_highlight = ExtResource( 2 )
VScrollBar/icons/increment = ExtResource( 2 )
VScrollBar/icons/increment_highlight = ExtResource( 2 )
VScrollBar/styles/grabber = SubResource( 1 )
VScrollBar/styles/grabber_highlight = SubResource( 2 )
VScrollBar/styles/grabber_pressed = SubResource( 3 )
VScrollBar/styles/scroll = SubResource( 4 )
VScrollBar/styles/scroll_focus = SubResource( 5 )

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("LoadingAnimationPlayer/CenterContainer/VBoxContainer/CenterContainer/SpinnerTextureRect:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="InkRunner" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.929412, 0.898039, 0.854902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryMarginContainer" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 250
custom_constants/margin_top = 40
custom_constants/margin_left = 250
custom_constants/margin_bottom = 40

[node name="StoryScrollContainer" type="ScrollContainer" parent="StoryMarginContainer"]
margin_left = 250.0
margin_top = 40.0
margin_right = 1670.0
margin_bottom = 1040.0
grow_horizontal = 2
theme = SubResource( 6 )
scroll_horizontal_enabled = false

[node name="StoryVBoxContainer" type="VBoxContainer" parent="StoryMarginContainer/StoryScrollContainer"]
margin_right = 1420.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="LoadingAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "LoadingAnimation"
anims/LoadingAnimation = SubResource( 7 )

[node name="CenterContainer" type="CenterContainer" parent="LoadingAnimationPlayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingAnimationPlayer/CenterContainer"]
margin_left = 704.0
margin_top = 360.0
margin_right = 1216.0
margin_bottom = 720.0
custom_constants/separation = 40

[node name="InkgdTextureRect" type="TextureRect" parent="LoadingAnimationPlayer/CenterContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 256.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="LoadingAnimationPlayer/CenterContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 512.0
margin_bottom = 360.0

[node name="SpinnerTextureRect" type="TextureRect" parent="LoadingAnimationPlayer/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 224.0
margin_right = 288.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 4 )
stretch_mode = 4
